<resources>
    <string name="Txt_Btn_Volver">Volver</string>
    <string name="app_name">Bestias Endemicas</string>
    <string name="titulo_principal">Bienvenidos a “Animales de Chile”\nDonde podrás conocer animales e insectos nativos de Chile</string>
    <string name="norte">Norte</string>
    <string name="centro">Centro</string>
    <string name="sur">Sur</string>
    <string name="austral">Austral</string>
    <string name="ver">Ver más</string>
    <string name="RedesSociales">Visitenos en nuestras Redes Sociales</string>
    <string name="descripcion_fondo">Imagen de fondo decorativa</string>
    <string name="deslizar"> Deslice derecha o izquierda</string>
    <string name="Txt_ReproducirAudio">Presiona el Boton para escuchar el sonido del animal</string>
    <string name="Txt_NoAudio">No hay sonido disponible para este animal</string>
    <string name="Titulo_Norte">Animales del norte</string>
    <string name="inf_GatoAndino">El gato andino: Es un pequeño felino en peligro de extinción que vive en las alturas de los Andes, desde Perú hasta Argentina y Bolivia</string>
    <string name="inf_pudu">Es el ciervo más pequeño del mundo, habitante de los bosques templados de Chile y Argentina, conocido por su tamaño diminuto (hasta 40 cm de altura y 10 kg) y su pelaje rojizo</string>
    <string name="inf_GatoColocolo"> Es un felino sudamericano de tamaño pequeño y pelaje plomizo-rubio con manchas, que habita en diversos ambientes desde el nivel del mar hastas los 5.000 metros de altitud, y se alimenta de roedores y aves </string>
    <string name="inf_Flamencochileno">Es un Ave de plumaje rosado que vive en humedales de Sudamérica y se alimenta filtrando pequeños invertebrados. Es sociable y vive en colonias grandes.</string>
    <string name="inf_Culebradecolalarga"> Es una Serpiente venenosa endémica de Chile, de cuerpo delgado y hasta 2 metros de largo. Habita desde desiertos hasta ciudades y se alimenta de reptiles y pequeños animales.</string>
    <string name="gatoandino">Gato Andino</string>
    <string name="pudu">Pudu</string>
    <string name="gato">Gato Colo Colo</string>
    <string name="flamenco">Flamenco Chileno</string>
    <string name="culebra">Culebra De Cola Larga</string>
    <string name="inf_GatoAndinoMas">  El gato andino es considerado uno de los felinos más amenazados del mundo. Vive en las zonas rocosas y áridas de la cordillera de los Andes, a altitudes superiores a los 3.000 metros. Su pelaje espeso lo protege del frío extremo, y sus grandes patas actúan como raquetas de nieve.</string>
    <string name="inf_puduMas">  El color varía de café rojizo a grisáceo amarillento. Los recién nacidos presentan un tono café rojizo con pequeños puntos blancos o crema dependiendo en cada caso, siendo la gran mayoría blancos.</string>
    <string name="inf_GatoColocoloMas"> Es relativamente más grande que el gato doméstico, puede medir aproximadamente de 43 a 80 cm (cabeza y cuerpo) y su cola puede llegar a medir de 23 a 33 cm. Su altura puede llegar a los 35 cm.[</string>
    <string name="inf_FlamencochilenoMas">  El flamenco se alimenta removiendo el sedimento con sus patas y luego filtrando los organismos en suspensión con las láminas que tiene en el pico. Los flamencos suelen girar 360º dejando anillos de alimentación en la superficie del sedimento.</string>
    <string name="inf_CulebradecolalargaMas">  Los juveniles presentan un régimen alimentario omnívoro, pero ya adultos poseen una dieta carnívora, alimentándose de reptiles pequeños .</string>
    <string name="Titulo_Centro">Animales Del Centro</string>
    <string name="abejorronativo">Abejorro Nativo</string>
    <string name="inf_Abejorro">El abejorro chileno, abejorro colorado, abejorro gigante, mangangá del Sur o moscardón del bosque es una especie de abeja carismática</string>
    <string name="info_AbejorroMas">caracterizado por su gran tamaño, abundante pelaje anaranjado y su importancia como polinizador en los bosques del sur de Chile. Este abejorro está en peligro de extinción debido a la introducción del abejorro europeo (Bombus terrestris), que compite por alimento y desplaza al nativo</string>
    <string name="loica">Loica</string>
    <string name="inf_Loica">Es una Pequeña ave negra con manchas coloridas, común en zonas abiertas de Chile y Argentina, conocida por su canto.</string>
    <string name="inf_LoicaMas"> Lo que más caracteriza a esta aves es su mancha roja en su pecho, garganta y cara. La mayoría de su parte trasera es de un color negruzco y café. Posee una cola corta, patas grises, y nariz grisáceo. En su cabeza tiene una especie de banda blanquecina.</string>
    <string name="MonitodelMonte">Monito del Monte</string>
    <string name="inf_MdelMonte">una especie endémica chilena que vive en los bosques y es muy buena para dormir</string>
    <string name="inf_MdelMonteMas">¿Sabías que este marsupial pasa todo el invierno hibernando? Así es, que solo podrás verlo en épocas de calor como en verano o primavera. Durante este largo periodo este pequeño animalito de 26 cm. y 31 gr. entra en un sueño profundo, donde su temperatura corporal puede llegar hasta los 5°C dándole un aspecto como si estuviera muerto. Con esta modalidad ahorra energía para utilizar en las otras épocas del año, la cual puede prolongarse desde varios días hasta algunos meses, dependiendo de su necesidad.</string>
    <string name="Degu_Comun">Degu</string>
    <string name="inf_Degu">es una especie de roedor histricomorfo de la familia Octodontidae.</string>
    <string name="inf_DeguMas">El degú común es un animal pequeño, con una longitud corporal de 25 a 31 cm (9,8 a 12,2 pulgadas) y un peso de 170 a 400 g (6 a 14,1 oz). Su pelaje es de color marrón amarillento por encima y amarillo cremoso por debajo, con amarillo alrededor de los ojos y una banda más clara alrededor del cuello. Tiene una cola larga y delgada con la punta negra y mechonada, orejas oscuras con poco pelo y dedos gris pálido. Su quinto dedo es pequeño, con una uña, en lugar de una garra, en las patas delanteras. Sus patas traseras están erizadas. Sus dientes laterales tienen forma de ocho, de ahí el nombre genérico del degú: Octodon .</string>
    <string name="Loro_Tricahue">Loro Tricahue</string>
    <string name="inf_lTricahue"> es una especie de ave psitaciforme de la familia de los psitácidos que habita en la meseta patagónica y en las laderas de las montañas de la cordillera de los Andes.</string>
    <string name="inf_lTricahueMas"> Es la única especie viviente del género Cyanoliseus. Su cabeza y lomo son de color verde oliva oscuro. Presenta un anillo ocular de color blanco. La parte superior del pecho es blancuzca (solo en la raza de Chile), mientras que la parte inferior es verde oliva. Las plumas del abdomen, patas, lomo y supracaudales son de color desde amarillo hasta verde oliva (según la subespecie). La parte central del abdomen es rojo-anaranjada.</string>
    <string name="Titulo_Sur">Animales Del Sur</string>
    <string name="inf_Huillin"> Es una nutria endémica de la Patagonia chilena de la que se sabe muy poco. Esta especie es el mustélido de mayor tamaño que hay en Chile y habita en los ríos del sur de nuestro país</string>
    <string name="inf_RanitaDarwin">Es un pequeño anfibio endémico de los bosques templados del sur de Chile y Argentina, famoso por su singular estrategia reproductiva</string>
    <string name="inf_FocaCangrejera">Es la foca más abundante de todo el mundo, con una población estimada entre 15 y 40 millones de ejemplares. Son altamente gregarias, viven sobre el hielo y son presa de focas leopardo y orcas.</string>
    <string name="inf_Tucuquere">Es un ave nocturna de plumaje marrón rayado, que habita bosques y matorrales, cazando principalmente roedores.</string>
    <string name="inf_Concón"> Es un es un búho mediano de cabeza redonda y plumaje barrado rojizo a negruzco, que vive en bosques templados de Chile y Argentina. </string>
    <string name="huillin">Huillin</string>
    <string name="ranitadedarwin">Ranita De Darwin</string>
    <string name="focacangrejera">Foca Cangrejera</string>
    <string name="tucuquere">Tucuquere</string>
    <string name="concon">Concón</string>
    <string name="inf_HuillinMas">  Su nombre científico, Lontra provocax, hace alusión a su carácter a veces esquivo y desafiante, aunque en realidad son animales principalmente tímidos y difíciles de observar en su entorno natural. </string>
    <string name="inf_RanitaDarwinMas"> Este diminuto anfibio, que apenas alcanza los 2.5 a 3.5 centímetros de longitud, debe su nombre al naturalista Charles Darwin, quien la descubrió durante su viaje a bordo del Beagle en 1834..</string>
    <string name="inf_FocaCangrejeraMas"> Su nombre científico es Lobodon carcinophaga, que curiosamente se traduce como "comedora de cangrejos". Sin embargo, este nombre es un tanto engañoso, ya que su dieta principal no consiste en cangrejos (que son escasos en la Antártida), sino que está altamente especializada en el krill antártico (Euphausia superba).</string>
    <string name="inf_TucuquereMas"> Su nombre científico es Bubo magellanicus (aunque durante mucho tiempo se consideró una subespecie de Bubo virginianus).El Tucúquere es un ave rapaz de tamaño considerable, uno de los búhos más grandes de Sudamérica. Puede alcanzar una longitud de entre 45 y 60 cm y una envergadura alar que supera el metro..</string>
    <string name="inf_ConconMas"> Esta especie, también conocida como lechuza bataraza austral, es un habitante característico y a menudo elusivo de los densos bosques Nothofagus (como los de lenga, coihue y ñirre).</string>
    <string name="Titulo_Austral">Animales De La Zona Austral</string>
    <string name="inf_Huemul"> Es un Ciervo andino en peligro de extinción, vive en bosques y montañas de la Patagonia.</string>
    <string name="inf_DelfinChileno">Es un Delfín pequeño endémico de Chile, vive en fiordos y estuarios australes.</string>
    <string name="inf_ZorroCulpeo">Es un Cánido patagónico, depredador de roedores y aves, también come frutos y carroña.</string>
    <string name="inf_CaranchoCordillerano">Ave rapaz carroñera de Tierra del Fuego, oportunista y terrestre.</string>
    <string name="inf_CondorAndino">El ave voladora más grande del mundo: hasta 3,3 metros de envergadura.</string>
    <string name="huemul">Huemul</string>
    <string name="delfinchileno">Delfin Chileno</string>
    <string name="zorroculpeo">Zorro Culpeo</string>
    <string name="caranchocordillerano">Carancho Cordillerano</string>
    <string name="condorandino">Condor Andino</string>
    <string name="inf_HuemulMas">Está adaptado para recorrer terrenos rocosos y escarpados, con pezuñas anchas y almohadillas antideslizantes.</string>
    <string name="inf_DelfinChilenoMas">Prefiere ambientes protegidos de baja profundidad, cerca de desembocaduras de ríos y bancos de huiro, con un alto grado de fidelidad al sitio.</string>
    <string name="inf_ZorroCulpeoMas">El zorro culpeo juega un papel fundamental como controlador de plagas naturales, aunque sigue siendo perseguido en varios sectores rurales por considerarse amenaza para la ganadería.</string>
    <string name="inf_CaranchoCordilleranoMas">Su inteligencia es notable: pueden usar piedras y palos para abrir huevos o carroña difícil. Además, forma parejas de por vida y ambos padres participan en el cuidado de las crías.</string>
    <string name="inf_CondorAndinoMas">El cóndor es símbolo de poder y libertad en las culturas andinas, y protagonista de rituales de cortejo que incluyen saltos, despliegue de alas y danzas en los riscos.</string>
    <string name="nombreanimal">Nombre del Animal</string>
    <string name="descripciondetallada">Descripción detallada del animal...</string>
    <string name="compartir">Compartir</string>
    <string name="favorito">Favorito</string>
    <string name="todos">Todos</string>
    <string name="terrestre">Terrestre</string>
</resources>