<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/mainSur"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_sur"
    android:fillViewport="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">

        <!-- Título -->
        <TextView
            android:id="@+id/titulo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:paddingBottom="16dp"
            android:text="@string/Titulo_Sur"
            android:textSize="20sp"
            android:textStyle="bold" />


        <!-- HUILLIN -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingBottom="16dp">

            <ImageView
                android:id="@+id/Img_Huillin"
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:contentDescription="@null"
                android:scaleType="centerCrop"
                android:src="@drawable/huill_n" />

            <TextView
                android:id="@+id/Info_Huillin"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:padding="16dp"
                android:text="@string/inf_Huillin"
                android:textSize="14sp" />
        </LinearLayout>

        <!-- RANITA DE DARWIN -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingBottom="16dp">

            <ImageView
                android:id="@+id/Img_RanitaDarwin"
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:contentDescription="@null"
                android:scaleType="centerCrop"
                android:src="@drawable/rana_de_darwin" />

            <TextView
                android:id="@+id/Info_RanitaDarwin"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:padding="16dp"
                android:text="@string/inf_RanitaDarwin"
                android:textSize="14sp" />
        </LinearLayout>

        <!-- FOCA CANGREJERA -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingBottom="16dp">

            <ImageView
                android:id="@+id/Img_FocaCangrejera"
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:contentDescription="@null"
                android:scaleType="centerCrop"
                android:src="@drawable/foca_cangrejera_caracteristicas" />

            <TextView
                android:id="@+id/Inf_FocaCangrejera"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:padding="16dp"
                android:text="@string/inf_FocaCangrejera"
                android:textSize="14sp" />
        </LinearLayout>

        <!-- TUCUQUERA -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingBottom="16dp">

            <ImageView
                android:id="@+id/Img_Tucuquera"
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:contentDescription="@null"
                android:scaleType="centerCrop"
                android:src="@drawable/tucu" />

            <TextView
                android:id="@+id/Inf_Tucuquera"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:padding="16dp"
                android:text="@string/inf_Tucuquere"
                android:textSize="14sp" />
        </LinearLayout>

        <!-- CONCÓN -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingBottom="16dp">

            <ImageView
                android:id="@+id/Img_Concón"
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:contentDescription="@null"
                android:scaleType="centerCrop"
                android:src="@drawable/concon" />

            <TextView
                android:id="@+id/Inf_Concón"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:padding="16dp"
                android:text="@string/inf_Concón"
                android:textSize="14sp" />
        </LinearLayout>


        <!-- Botón Volver -->
        <Button
            android:id="@+id/btnVolverS"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:paddingTop="16dp"
            android:text="@string/Txt_Btn_Volver" />

    </LinearLayout>
</androidx.core.widget.NestedScrollView>