<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/mainAustral"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_austral"
    android:fillViewport="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">

        <!-- Título -->
        <TextView
            android:id="@+id/titulo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:paddingBottom="16dp"
            android:text="@string/Titulo_Austral"
            android:textSize="20sp"
            android:textStyle="bold" />

        <!-- Animal 1 Huemul-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingBottom="16dp">

            <ImageView
                android:id="@+id/img_huemul"
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:contentDescription="@null"
                android:scaleType="centerCrop"
                android:src="@drawable/huemul" />

            <TextView
                android:id="@+id/info_Huemul"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:padding="16dp"
                android:text="@string/inf_Huemul"
                android:textSize="14sp" />

        </LinearLayout>

        <!-- Animal 2 Delfin Chileno-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingBottom="16dp">

            <ImageView
                android:id="@+id/img_DelfinChileno"
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:contentDescription="@null"
                android:scaleType="centerCrop"
                android:src="@drawable/delfin_chileno" />

            <TextView
                android:id="@+id/info_DelfinChileno"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:padding="16dp"
                android:text="@string/inf_DelfinChileno"
                android:textSize="14sp" />

        </LinearLayout>

        <!-- Animal 3: Zorro Culpeo -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingBottom="16dp">

            <ImageView
                android:id="@+id/img_ZorroCulpeo"
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:contentDescription="@null"
                android:scaleType="centerCrop"
                android:src="@drawable/zorro_culpeo" />

            <TextView
                android:id="@+id/Info_ZorroCulpeo"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:padding="16dp"
                android:text="@string/inf_ZorroCulpeo"
                android:textSize="14sp" />

        </LinearLayout>

        <!-- Animal 4: Carancho Cordillerano -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingBottom="16dp">

            <ImageView
                android:id="@+id/img_CaranchoCordillerano"
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:contentDescription="@null"
                android:scaleType="centerCrop"
                android:src="@drawable/carancho_cordillerano" />

            <TextView
                android:id="@+id/Info_CaranchoCordillerano"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:padding="16dp"
                android:text="@string/inf_CaranchoCordillerano"
                android:textSize="14sp" />

        </LinearLayout>

        <!-- Animal 5: Condor Andino -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingBottom="16dp">

            <ImageView
                android:id="@+id/img_CondorAndino"
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:contentDescription="@null"
                android:scaleType="centerCrop"
                android:src="@drawable/condor_andino" />

            <TextView
                android:id="@+id/Info_CondorAndino"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:padding="16dp"
                android:text="@string/inf_CondorAndino"
                android:textSize="14sp" />

        </LinearLayout>

        <!-- Botón Volver -->
        <Button
            android:id="@+id/btnVolverS"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:paddingTop="16dp"
            android:text="@string/Txt_Btn_Volver" />

    </LinearLayout>
</androidx.core.widget.NestedScrollView>