<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_gradient"
    android:fillViewport="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">

        <!-- Título -->
        <TextView
            android:id="@+id/titulo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Titulo_aAcuaticos"
            android:textSize="20sp"
            android:textStyle="bold"
            android:gravity="center"
            android:paddingBottom="16dp"/>


        <!-- Animal 1: Huillin -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingBottom="16dp">

            <ImageView
                android:id="@+id/Img_Huillin"
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:contentDescription="@null"
                android:scaleType="centerCrop"
                android:src="@drawable/huill_n" />

            <TextView
                android:id="@+id/Info_Huillin"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:padding="16dp"
                android:text="@string/inf_Huillin"
                android:textSize="14sp" />
        </LinearLayout>

        <!-- Animal 2: Ranita de Darwin -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingBottom="16dp">

            <ImageView
                android:id="@+id/Img_RanitaDarwin"
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:contentDescription="@null"
                android:scaleType="centerCrop"
                android:src="@drawable/rana_de_darwin" />

            <TextView
                android:id="@+id/Info_RanitaDarwin"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/inf_RanitaDarwin"
                android:padding="16dp"
                android:textSize="14sp" />
        </LinearLayout>

        <!-- Animal 3: Foca Cangrejera -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingBottom="16dp">

            <ImageView
                android:id="@+id/Img_ChincheGigante"
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:contentDescription="@null"
                android:scaleType="centerCrop"
                android:src="@drawable/foca_cangrejera_caracteristicas" />

            <TextView
                android:id="@+id/Info_FocaCangrejera"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/inf_FocaCangrejera"
                android:padding="16dp"
                android:textSize="14sp" />
        </LinearLayout>




        <!-- Botón Volver -->
        <Button
            android:id="@+id/btnVolver"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:paddingTop="16dp"
            android:text="@string/Txt_Btn_Volver" />

    </LinearLayout>
</androidx.core.widget.NestedScrollView>